# stochastic-demand-opt

./: .gitignore  README.md  environment.yml  pyproject.toml
data/: README.md
preds/: README.md
scripts/: forecast.py  optimize.py
src/stochastic_demand_opt/: __init__.py  config.py  data.py  evaluation.py  features.py  inventory.py  model.py
